# atco-brkga

./: .gitignore  Makefile  pyproject.toml
config/: logging_config.py
docs/logs/: notes-logs.md  ruff_format_errors.txt
docs/notes/: algo-parts.md  notes-brkga.md  notes-decisions.md  notes-design.md  notes-f-objetivo.md  notes-pending.md  pep8.md
entrada/Barcelona/: ListaSectoresElementales_Barcelona.csv  MatrizAfinidad_Barcelona.csv  SectoresNucleos_Barcelona.csv  SectorizacionesSectoresVolumenes_Barcelona.csv
entrada/Canarias/: ListaSectoresElementales_Canarias.csv  MatrizAfinidad_Canarias.csv  SectoresNucleos_Canarias.csv  SectorizacionesSectoresVolumenes_Canarias.csv
entrada/Madrid/: ListaSectoresElementales_Madrid.csv  MatrizAfinidad_Madrid.csv  SectoresNucleos_Madrid.csv  SectorizacionesSectoresVolumenes_Madrid.csv
entrada/Matrices de afinidad/: MatrizAfinidad_Barcelona_20190226.csv  MatrizAfinidad_Barcelona_20190319.csv  MatrizAfinidad_Barcelona_20190323.csv  MatrizAfinidad_Barcelona_20190610.csv  MatrizAfinidad_Barcelona_20190614.csv  MatrizAfinidad_Barcelona_20190819.csv  MatrizAfinidad_Barcelona_20190823.csv  MatrizAfinidad_Madrid_20190323.csv  MatrizAfinidad_Madrid_20190404.csv  MatrizAfinidad_Madrid_20190714.csv  MatrizAfinidad_Palma_20190212.csv  MatrizAfinidad_Sevilla_20190212.csv  (+2 more)
experiments/: 01_seed_pop.py  02_brkga_smoke.py  03_brkga_atcoinstance.py  04_brkga_bin_midpoint.py  05_brkga_warmstart_analisis.py  06-decoder_round_trip.py  07_brkga_instance_decoder.py  seed_09.xlsx  seed_19.xlsx  test_prioridad.py
resources/: algorithm.properties  options.properties  parametrosEjecucion_default.properties  parametrosRestricciones_default.properties  parametrosSA_default.properties  parametrosVNS_default.properties  parametros_algoritmo.properties  problemParameters.properties
tests/: conftest.py
(+73 files in other folders)
