[project]
name = "atco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "EricLuceroGonzalez", email = "ericlucerogonzalez@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
]

[project.scripts]
atco = "atco:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.5.8",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]
