[project]
name = "atco"
version = "0.1.0"
description = "BRKGA-based optimizer for air traffic controller shift schedules"
readme = "README.md"
authors = [
    { name = "EricLuceroGonzalez", email = "ericlucerog@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
]

[project.scripts]
atco = "atco.cli.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.5.8",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]

[tool.hatch.build.targets.wheel]
packages = ["src/atco"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RET"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/atco"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"